complete renderPokemonCards functionality

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
     <section class="container">
       <div id="pokemon-list" class="row justify-content-center">
         <!-- Placeholder example card to be removed when writing JS-->
-        <div class="card col-sm-3">
+        <!-- <div class="card col-sm-3">
           <p class="dex-num" id="dex-num">1</p>
           <img class="poke-img" id="poke-img" src="bulbasaur.png" />
           <p class="poke-name" id="poke-name">Bulbasaur</p>
-        </div>
+        </div> -->
       </div>
     </section>
 
