--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <div class='modal-header'>
           <button type='button' class='close' data-dismiss='modal'>X</button>
         </div>
+        <div class='row'>
           <div class='col-sm-6'>
             <h3 id='modal-dex-num'> </h3>
             <img id='modal-img'>
@@ -100,6 +101,7 @@
               <span class="front">Add to team</span>
             </button>
           </div>         
+        </div>  
       </div>
 
 
