--- a/index.html
+++ b/index.html
@@ -80,31 +80,36 @@
     </section>
 
     <!-- Modal -->
-    <div class='modal'>
-      <div class='modal-content'> 
-        <div class='modal-header'>
-          <button type='button' class='close' data-dismiss='modal'>X</button>
+    <div class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">X</button>
         </div>
-        <div class='row'>
-          <div class='col-sm-6'>
-            <h3 id='modal-dex-num'> </h3>
-            <img id='modal-img'>
-
+        <div class="row">
+          <div class="col-sm-6">
+            <h3 id="modal-dex-num"></h3>
+            <img id="modal-img" />
           </div>
-          <div class='col-sm-6'>
-            <h3 id='modal-poke-name'></h3>
-            <h3 id='modal-height'></h3>
-            <h3 id='modal-weight'></h3>
-            <button id="add-to-team" type="submit" class="button pushable">
-              <span class="shadow"></span>
-              <span class="edge"></span>
-              <span class="front">Add to team</span>
-            </button>
-          </div>         
-        </div>  
+          <div class="col-sm-6">
+            <h3 id="modal-poke-name"></h3>
+            <h4 id="modal-height"></h4>
+            <h4 id="modal-weight"></h4>
+            <h4 id="modal-type-1"></h4>
+            <h4 id="modal-type-2"></h4>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <button
+            id="add-to-team"
+            type="submit"
+            class="button pushable justify-content-center"
+          >
+            <span class="shadow"></span>
+            <span class="edge"></span>
+            <span class="front">Add to team</span>
+          </button>
+        </div>
       </div>
-
-
     </div>
 
     <!-- Body -->
