have type display in modal

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
             <h3 id="modal-poke-name"></h3>
             <h4 id="modal-height"></h4>
             <h4 id="modal-weight"></h4>
-            <h4 id="modal-type-1"></h4>
-            <h4 id="modal-type-2"></h4>
+            <h4 id="modal-types"></h4>
           </div>
         </div>
         <div class="row justify-content-center">
