add CRUD functionality

--- a/index.html
+++ b/index.html
@@ -76,8 +76,19 @@
           <option value="steel">Steel</option>
           <option value="fairy">Fairy</option>
         </select>
+        <button class="pushable" id="show-team">
+          <span class="shadow"></span>
+          <span class="edge"></span>
+          <span class="front">Show Team</span>
+        </button>
       </div>
     </section>
+
+    <!-- Team Bar -->
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    </div>
+
 
     <!-- Modal -->
     <div class="modal">
