add header scroll functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body id="slideAnimation">
     <!-- Header -->
-    <section id="header" class="container">
+    <section id="header" class="container-fluid">
       <!-- Title -->
       <div class="row justify-content-center">
         <h2 id="title">PokeDex</h2>
@@ -93,10 +93,11 @@
 
     <!-- Team Bar -->
     <div id="mySidebar" class="sidebar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
       <h4>Click Pokemon To Remove</h4>
     </div>
-
 
     <!-- Modal -->
     <div class="modal">
