--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <!-- Modal -->
     <div class="modal">
-      <div class="modal-content">
+      <div id="modal-content" class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">X</button>
         </div>
