concise all progress together

--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
 
     <!-- Team Bar -->
     <div id="mySidebar" class="sidebar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
+      <a href="javascript:void(0)" class="closebtn">&times;</a>
       <h4>Click Pokemon To Remove</h4>
     </div>
 
