--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
         <label for="type-filter" id="type-label">Filter by Type:</label>
         <select name="type-filter" id="type-filter">
+          <option value="all">All</option>
           <option value="normal">Normal</option>
           <option value="fire">Fire</option>
           <option value="water">Water</option>
