--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
           <div class="col-sm-6">
             <h3 id="modal-dex-num"></h3>
             <img id="modal-img" />
+            <button type="button" class="pushable" id="normalBtn">
+              <span class="shadow"></span>
+              <span class="edge"></span>
+              <span class="front">Normal Sprite</span>
+            </button>
+            <button type="button" class="pushable" id="shinyBtn">             
+               <span class="shadow"></span>
+              <span class="edge"></span>
+              <span class="front">Shiny Sprite</span>
+            </button>
           </div>
           <div class="col-sm-6">
             <h3 id="modal-poke-name"></h3>
